--- a/.github/workflows/main_chchmetrobusroute.yml
+++ b/.github/workflows/main_chchmetrobusroute.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_66455b864db64a4dbee5fa439eb8642a }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_fde1d6e1a1d848229f38bd63beb6f26e }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_9f3dc9a6846345169867b2fe642830a2 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_559cce947f5741e5ab9a3b8b6a752915 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_66455b864db64a4dbee5fa439eb8642a }}/chchmetro:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_9f3dc9a6846345169867b2fe642830a2 }}/mcr.microsoft.com/appsvc/staticsite:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'chchmetrobusroute'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_dac19d9610e847a4acc532d1812155a7 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_66455b864db64a4dbee5fa439eb8642a }}/chchmetro:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_8179e95031244fde8b57e4fc86836426 }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_9f3dc9a6846345169867b2fe642830a2 }}/mcr.microsoft.com/appsvc/staticsite:${{ github.sha }}'
