--- a/.github/workflows/main_chchoptimizebusroute.yml
+++ b/.github/workflows/main_chchoptimizebusroute.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: ./src
 
   deploy:
     runs-on: ubuntu-latest
